src/tests/fixtures/todo/userExample.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Query = {};

/** @gqlField */
export function me(_: Query): User {
  return { firstName: "John", lastName: "Doe" };
}

/** @gqlType */
type User = {
  /** @gqlField */
  firstName: string;
  /** @gqlField */
  lastName: string;
};

/** @gqlField */
export function fullName(user: User): string {
  return `${user.firstName} ${user.lastName}`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/todo/userExample.ts:1:5 - error: `@gqlType` can only be used on class or interface declarations.

1 /** @gqlType */
      ~~~~~~~~~
src/tests/fixtures/todo/userExample.ts:9:5 - error: `@gqlType` can only be used on class or interface declarations.

9 /** @gqlType */
      ~~~~~~~~~
